--- a/server/src/main/webapp/act/process-editor/editor-app/i18n/en.json
+++ b/server/src/main/webapp/act/process-editor/editor-app/i18n/en.json
@@ -1,6 +1,6 @@
 {    
     "HEADER.BRAND" : "流程设计器",
-    "HEADER.BRAND_TAGLINE" : "Powered by JeeSite.com",
+    "HEADER.BRAND_TAGLINE" : "Powered by WXMETRO",
     "PAGE.HEADER" : "thinkgem@163.com",
 
     "ACTION.OK" : "确定",
